# loopjet-frappe-custom

./: .editorconfig  .gitignore  LICENSE.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
loopjet_frappe_custom/: api.py  branding.py  hooks.py  inbound_email.py  install.py  mcp_setup.py  modules.txt  patches.txt  portal.py  workspace.py
loopjet_frappe_custom/integrations/: __init__.py
loopjet_frappe_custom/loopjet_custom/: __init__.py
loopjet_frappe_custom/loopjet_custom/page/mcp_setup/: mcp_setup.js  mcp_setup.json
loopjet_frappe_custom/patches/v0_1/: add_raven_home_shortcut.py  migrate_legacy_email_issues.py
loopjet_frappe_custom/tests/: test_branding.py  test_inbound_email.py  test_manifest.py  test_mcp_setup.py  test_workspace.py
